prevent layout shifts when show hide layer button appears or disappears

--- a/asset-chooser-styles.css
+++ b/asset-chooser-styles.css
@@ -25,6 +25,10 @@
   transform: scale(0.95);
 }
 
+.invisible-button {
+  visibility: hidden;
+}
+
 /* .remove-asset-btn {
    transition: transform 0.1s; 
 } */
